--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
     <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-svg" />
     <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
