--- a/src/sobre.html
+++ b/src/sobre.html
@@ -205,13 +205,13 @@
         <div class="developer-item">
           <p>
             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-            <em>Minha vida pode não ser perfeita, pode até nem ser boa, mas eu vivo ela da minha maneira, e só isso já é mais que suficiente.</em>
+            <em>Viver não é esperar a tempestade passar. É aprender a dançar na chuva.</em>
             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
           </p>
-          <img src="assets/developer-2.png" class="developer-img" alt="">
-                    <h3 style="color: #000;">Daniel domingos</h3>
+          <img src="assets/developer-5.png" class="developer-img" alt="">
+                    <h3 style="color: #000;">Kauãn Henrique</h3>
           <div class="conteiner-nome-dev">
-          <h4>Desenvolvedor Full Stack </h4>
+          <h4>Desenvolvedor Front end </h4>
           <br>
           <div>
           <i class="bi bi-instagram" style="color: #e4405f;"></i>
@@ -228,10 +228,10 @@
             <em>Minha vida pode não ser perfeita, pode até nem ser boa, mas eu vivo ela da minha maneira, e só isso já é mais que suficiente.</em>
             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
           </p>
-          <img src="assets/developer-2.png" class="developer-img" alt="">
-                    <h3 style="color: #000;">Daniel domingos</h3>
+          <img src="assets/developer-6.png" class="developer-img" alt="">
+                    <h3 style="color: #000;">Matheus Henrique</h3>
           <div class="conteiner-nome-dev">
-          <h4>Desenvolvedor Full Stack </h4>
+          <h4>Desenvolvedor back-end </h4>
           <br>
           <div>
           <i class="bi bi-instagram" style="color: #e4405f;"></i>
@@ -241,6 +241,26 @@
         </div>
         </div>
       </div><!-- End developer item -->
+       <div class="swiper-slide">
+        <div class="developer-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            <em>Minha vida pode não ser perfeita, pode até nem ser boa, mas eu vivo ela da minha maneira, e só isso já é mais que suficiente.</em>
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+          <img src="assets/developer-7.png" class="developer-img" alt="">
+                    <h3 style="color: #000;">Giovani Rodrigues</h3>
+          <div class="conteiner-nome-dev">
+          <h4>Desenvolvedor Front-end </h4>
+          <br>
+          <div>
+          <i class="bi bi-instagram" style="color: #e4405f;"></i>
+          <i class="bi bi-github" style="color: #000;"></i>
+          <i class="bi bi-linkedin" style="color: #126BC4;"></i>
+        </div>
+        </div>
+        </div>
+      <!-- </div>End developer item -->
       <div class="swiper-slide">
         <div class="developer-item">
           <p>
@@ -248,7 +268,7 @@
             <em>Minha vida pode não ser perfeita, pode até nem ser boa, mas eu vivo ela da minha maneira, e só isso já é mais que suficiente.</em>
             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
           </p>
-          <img src="assets/developer-2.png" class="developer-img" alt="">
+          <img src="assets/developer-8" class="developer-img" alt="">
                     <h3 style="color: #000;">Daniel domingos</h3>
           <div class="conteiner-nome-dev">
           <h4>Desenvolvedor Full Stack </h4>
@@ -260,49 +280,11 @@
         </div>
         </div>
         </div>
-      </div><!-- End developer item -->
-      <div class="swiper-slide">
-        <div class="developer-item">
-          <p>
-            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-            <em>Minha vida pode não ser perfeita, pode até nem ser boa, mas eu vivo ela da minha maneira, e só isso já é mais que suficiente.</em>
-            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-          </p>
-          <img src="assets/developer-2.png" class="developer-img" alt="">
-                    <h3 style="color: #000;">Daniel domingos</h3>
-          <div class="conteiner-nome-dev">
-          <h4>Desenvolvedor Full Stack </h4>
-          <br>
-          <div>
-          <i class="bi bi-instagram" style="color: #e4405f;"></i>
-          <i class="bi bi-github" style="color: #000;"></i>
-          <i class="bi bi-linkedin" style="color: #126BC4;"></i>
-        </div>
-        </div>
-        </div>
-      </div><!-- End developer item -->
-      <div class="swiper-slide">
-        <div class="developer-item">
-          <p>
-            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-            <em>Minha vida pode não ser perfeita, pode até nem ser boa, mas eu vivo ela da minha maneira, e só isso já é mais que suficiente.</em>
-            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-          </p>
-          <img src="assets/developer-2.png" class="developer-img" alt="">
-                    <h3 style="color: #000;">Daniel domingos</h3>
-          <div class="conteiner-nome-dev">
-          <h4>Desenvolvedor Full Stack </h4>
-          <br>
-          <div>
-          <i class="bi bi-instagram" style="color: #e4405f;"></i>
-          <i class="bi bi-github" style="color: #000;"></i>
-          <i class="bi bi-linkedin" style="color: #126BC4;"></i>
-        </div>
-        </div>
-        </div>
-      </div><!-- End developer item -->
+      </div> 
+      <!-- End developer item -->
+       
 
-    </div>
+    <!-- </div>
       <div class="swiper-slide">
         <div class="developer-item">
           <p>
@@ -324,7 +306,7 @@
         </div>
       </div><!-- End developer item -->
 </div>
-      <div class="swiper-slide">
+      <!-- <div class="swiper-slide">
         <div class="developer-item">
           <p>
             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -341,8 +323,8 @@
           <i class="bi bi-github" style="color: #000;"></i>
           <i class="bi bi-linkedin" style="color: #126BC4;"></i>
         </div>
-        </div>
-        </div>
+        </div> -->
+        </div> 
       </div><!-- End developer item -->
 
 
